# devops-mcp-server

./: .dockerignore  AGENTS.md  CHANGELOG.md  DEPLOYMENT_EXAMPLE.md  Dockerfile  README.md  USAGE.md  config.yaml  docker-compose.yml  pyproject.toml  server.py
tools/deployment/: __init__.py  deploy.py  mcp_deploy.py
tools/docker/: __init__.py  compose.py  container.py
tools/paas/: __init__.py  flyio.py  railway.py  render.py
tools/process/: __init__.py  monitor.py
tools/registry/: __init__.py  dockerhub.py
